LS-2215 - tests for dev and migration to junit 5